SyntaxicAnalyser.output
State 4 conflicts: 1 shift/reduce
State 11 conflicts: 1 shift/reduce
State 23 conflicts: 1 shift/reduce
State 26 conflicts: 2 shift/reduce
State 29 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 80 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 104 conflicts: 9 shift/reduce, 12 reduce/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 reduce/reduce
State 139 conflicts: 1 reduce/reduce
State 140 conflicts: 12 shift/reduce
State 142 conflicts: 12 shift/reduce
State 143 conflicts: 12 shift/reduce
State 149 conflicts: 12 shift/reduce
State 170 conflicts: 2 reduce/reduce
State 188 conflicts: 12 shift/reduce
State 195 conflicts: 12 shift/reduce
State 196 conflicts: 9 shift/reduce
State 219 conflicts: 12 shift/reduce
State 222 conflicts: 12 shift/reduce
State 235 conflicts: 12 shift/reduce
State 236 conflicts: 12 shift/reduce
State 257 conflicts: 12 shift/reduce
State 258 conflicts: 12 shift/reduce
State 259 conflicts: 12 shift/reduce
State 261 conflicts: 12 shift/reduce
State 262 conflicts: 1 shift/reduce
State 264 conflicts: 13 shift/reduce
State 267 conflicts: 12 shift/reduce
State 268 conflicts: 12 shift/reduce
State 269 conflicts: 12 shift/reduce
State 274 conflicts: 12 shift/reduce
State 276 conflicts: 13 shift/reduce
State 277 conflicts: 12 shift/reduce
State 281 conflicts: 9 shift/reduce
State 282 conflicts: 9 shift/reduce
State 299 conflicts: 12 shift/reduce
State 301 conflicts: 12 shift/reduce
State 302 conflicts: 12 shift/reduce
State 307 conflicts: 12 shift/reduce
State 308 conflicts: 12 shift/reduce
State 309 conflicts: 12 shift/reduce
State 310 conflicts: 12 shift/reduce
State 311 conflicts: 12 shift/reduce
State 313 conflicts: 12 shift/reduce
State 316 conflicts: 12 shift/reduce
State 317 conflicts: 12 shift/reduce
State 336 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: MainClass ClassDeclarationS
    2        | error ClassDeclarationS
    3        | error MainClass ClassDeclarationS
    4        | MainClass error ClassDeclarationS
    5        | MainClass ClassDeclarationS error

    6 MainClass: MainHead MainBody

    7 @1: /* empty */

    8 @2: /* empty */

    9 MainHead: ClassHead BRACE_OPEN KEYWORD_PUBLIC KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE
   10         | ClassHead BRACE_OPEN error KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead BRACE_OPEN error KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE

   12 @3: /* empty */

   13 @4: /* empty */

   14 @5: /* empty */

   15 MainBody: IDENTIFIER @3 PARENTHESE_CLOSE @4 BRACE_OPEN StatementS BRACE_CLOSE @5 MethodDeclarationS BRACE_CLOSE

   16 ClassDeclarationS: ClassDeclaration ClassDeclarationS
   17                  | /* empty */
   18                  | ClassDeclaration error ClassDeclarationS

   19 ClassDeclaration: ClassHead KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   20                 | ClassHead KEYWORD_EXTENDS error BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   21                 | ClassHead KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS error
   22                 | ClassHead BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead BRACE_OPEN VarDeclarationS MethodDeclarationS error

   24 ClassHead: KEYWORD_CLASS Identifier
   25          | error Identifier

   26 VarDeclarationS: VarDeclaration VarDeclarationS
   27                | /* empty */

   28 @6: /* empty */

   29 VarDeclaration: Variable @6 SEMI_COLON
   30               | Variable error

   31 @7: /* empty */

   32 VariableS: Variable @7 COMMA VariableS
   33          | Variable
   34          | /* empty */
   35          | Variable error VariableS

   36 Variable: Type Identifier
   37         | error Identifier
   38         | Type error

   39 MethodDeclarationS: MethodDeclaration MethodDeclarationS
   40                   | /* empty */
   41                   | MethodDeclaration error MethodDeclarationS
   42                   | MethodDeclaration MethodDeclarationS error

   43 @8: /* empty */

   44 @9: /* empty */

   45 MethodDeclaration: KEYWORD_PUBLIC Variable @8 PARENTHESE_OPEN VariableS PARENTHESE_CLOSE @9 BRACE_OPEN StatementS KEYWORD_RETURN Expression SEMI_COLON BRACE_CLOSE
   46                  | error KEYWORD_PUBLIC Variable PARENTHESE_OPEN VariableS PARENTHESE_CLOSE BRACE_OPEN StatementS KEYWORD_RETURN Expression SEMI_COLON BRACE_CLOSE
   47                  | KEYWORD_PUBLIC error Identifier PARENTHESE_OPEN VariableS PARENTHESE_CLOSE BRACE_OPEN StatementS KEYWORD_RETURN Expression SEMI_COLON BRACE_CLOSE
   48                  | KEYWORD_PUBLIC Type error PARENTHESE_OPEN VariableS PARENTHESE_CLOSE BRACE_OPEN StatementS KEYWORD_RETURN Expression SEMI_COLON BRACE_CLOSE

   49 Type: TYPE_INT BRACKET_OPEN BRACKET_CLOSE
   50     | TYPE_BOOLEAN
   51     | TYPE_INT
   52     | TYPE_STRING
   53     | TYPE_INT BRACKET_OPEN error
   54     | error BRACKET_OPEN BRACKET_CLOSE
   55     | TYPE_INT error BRACKET_CLOSE

   56 StatementS: Statement StatementS
   57           | Statement
   58           | /* empty */

   59 Statement: BRACE_OPEN StatementS BRACE_CLOSE
   60          | BRACE_OPEN StatementS error
   61          | error StatementS BRACE_CLOSE
   62          | VarDeclaration

   63 @10: /* empty */

   64 @11: /* empty */

   65 Statement: KEYWORD_IF PARENTHESE_OPEN Expression PARENTHESE_CLOSE @10 BRACE_OPEN StatementS BRACE_CLOSE @11 KEYWORD_ELSE BRACE_OPEN StatementS BRACE_CLOSE
   66          | KEYWORD_IF error Expression PARENTHESE_CLOSE StatementS KEYWORD_ELSE StatementS
   67          | KEYWORD_IF PARENTHESE_OPEN Expression error Statement KEYWORD_ELSE StatementS
   68          | KEYWORD_IF error StatementS KEYWORD_ELSE StatementS

   69 @12: /* empty */

   70 @13: /* empty */

   71 Statement: KEYWORD_WHILE @12 PARENTHESE_OPEN Expression PARENTHESE_CLOSE @13 BRACE_OPEN StatementS BRACE_CLOSE
   72          | KEYWORD_PRINT PARENTHESE_OPEN Expression PARENTHESE_CLOSE SEMI_COLON
   73          | KEYWORD_PRINT PARENTHESE_OPEN Expression PARENTHESE_CLOSE error
   74          | KEYWORD_PRINT PARENTHESE_OPEN Expression error SEMI_COLON
   75          | Identifieraff OP_AFFECT Expression SEMI_COLON
   76          | Identifieraff OP_AFFECT Expression error
   77          | Identifieraff OP_AFFECT error SEMI_COLON
   78          | Identifieraff error Expression SEMI_COLON
   79          | Identifieraff BRACKET_OPEN Expression BRACKET_CLOSE OP_AFFECT Expression SEMI_COLON
   80          | Identifieraff error Expression BRACKET_CLOSE OP_AFFECT Expression SEMI_COLON
   81          | Identifieraff BRACKET_OPEN Expression error OP_AFFECT Expression SEMI_COLON
   82          | Identifieraff BRACKET_OPEN Expression BRACKET_CLOSE error Expression SEMI_COLON
   83          | Identifieraff BRACKET_OPEN Expression BRACKET_CLOSE OP_AFFECT Expression error

   84 @14: /* empty */

   85 Expression: INTEGER_LITERAL @14 ExpressionComp
   86           | BOOLEAN_LITERAL ExpressionComp
   87           | STRING_LITERAL ExpressionComp
   88           | Identifierexp ExpressionComp
   89           | KEYWORD_THIS ExpressionComp
   90           | KEYWORD_NEW TYPE_INT BRACKET_OPEN Expression BRACKET_CLOSE ExpressionComp
   91           | KEYWORD_NEW TYPE_INT error Expression BRACKET_CLOSE ExpressionComp
   92           | KEYWORD_NEW error BRACKET_OPEN Expression BRACKET_CLOSE ExpressionComp
   93           | KEYWORD_NEW TYPE_INT BRACKET_OPEN Expression error ExpressionComp
   94           | KEYWORD_NEW Identifier PARENTHESE_OPEN PARENTHESE_CLOSE ExpressionComp
   95           | KEYWORD_NEW error PARENTHESE_OPEN PARENTHESE_CLOSE ExpressionComp
   96           | KEYWORD_NEW Identifier error PARENTHESE_CLOSE ExpressionComp
   97           | KEYWORD_NEW Identifier PARENTHESE_OPEN error ExpressionComp
   98           | KEYWORD_NEW Identifier PARENTHESE_OPEN ExpressionS PARENTHESE_CLOSE ExpressionComp
   99           | KEYWORD_NEW error PARENTHESE_OPEN ExpressionS PARENTHESE_CLOSE ExpressionComp
  100           | KEYWORD_NEW Identifier error ExpressionS PARENTHESE_CLOSE ExpressionComp
  101           | KEYWORD_NEW Identifier PARENTHESE_OPEN ExpressionS error ExpressionComp
  102           | OP_NOT Expression ExpressionComp
  103           | PARENTHESE_OPEN Expression PARENTHESE_CLOSE ExpressionComp
  104           | error Expression PARENTHESE_CLOSE ExpressionComp
  105           | PARENTHESE_OPEN Expression error ExpressionComp

  106 @15: /* empty */

  107 ExpressionComp: Operator Expression @15 ExpressionComp

  108 @16: /* empty */

  109 ExpressionComp: Logic Expression @16 ExpressionComp
  110               | BRACKET_OPEN Expression BRACKET_CLOSE ExpressionComp
  111               | BRACKET_OPEN Expression error ExpressionComp
  112               | DOT KEYWORD_LENGTH ExpressionComp
  113               | DOT error KEYWORD_LENGTH ExpressionComp

  114 @17: /* empty */

  115 ExpressionComp: MethodCall PARENTHESE_OPEN ExpressionS PARENTHESE_CLOSE @17 ExpressionComp
  116               | MethodCall error ExpressionS PARENTHESE_CLOSE ExpressionComp
  117               | MethodCall PARENTHESE_OPEN ExpressionS error ExpressionComp

  118 @18: /* empty */

  119 ExpressionComp: MethodCall PARENTHESE_OPEN PARENTHESE_CLOSE @18 ExpressionComp
  120               | MethodCall error PARENTHESE_CLOSE ExpressionComp
  121               | MethodCall PARENTHESE_OPEN error ExpressionComp
  122               | /* empty */

  123 MethodCall: DOT Identifier

  124 @19: /* empty */

  125 ExpressionS: Expression @19 COMMA ExpressionS
  126            | Expression
  127            | Expression error ExpressionS

  128 Operator: OP_ADD
  129         | OP_MULTIPLY
  130         | OP_SUBSTRACT

  131 Logic: LOG_AND
  132      | LOG_LESS
  133      | LOG_EQLESS
  134      | LOG_MORE
  135      | LOG_EQMORE
  136      | LOG_EQ
  137      | LOG_DIF

  138 Identifier: IDENTIFIER

  139 Identifierexp: IDENTIFIER

  140 Identifieraff: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256) 2 3 4 5 10 11 18 20 21 23 25 30 35 37 38 41 42 46 47 48
    53 54 55 60 61 66 67 68 73 74 76 77 78 80 81 82 83 91 92 93 95
    96 97 99 100 101 104 105 111 113 116 117 120 121 127
IDENTIFIER (258) 15 138 139 140
TYPE_INT (259) 49 51 53 55 90 91 93
TYPE_BOOLEAN (260) 50
TYPE_STRING (261) 9 10 11 52
BOOLEAN_LITERAL (262) 86
INTEGER_LITERAL (263) 85
STRING_LITERAL (264) 87
KEYWORD_CLASS (265) 24
KEYWORD_PUBLIC (266) 9 10 45 46 47 48
KEYWORD_MAIN (267) 9 10 11
KEYWORD_EXTENDS (268) 19 20 21
KEYWORD_RETURN (269) 45 46 47 48
KEYWORD_IF (270) 65 66 67 68
KEYWORD_ELSE (271) 65 66 67 68
KEYWORD_WHILE (272) 71
KEYWORD_PRINT (273) 72 73 74
KEYWORD_LENGTH (274) 112 113
KEYWORD_THIS (275) 89
KEYWORD_NEW (276) 90 91 92 93 94 95 96 97 98 99 100 101
PARENTHESE_OPEN (277) 9 10 11 45 46 47 48 65 67 71 72 73 74 94 95 97
    98 99 101 103 105 115 117 119 121
PARENTHESE_CLOSE (278) 15 45 46 47 48 65 66 71 72 73 94 95 96 98 99
    100 103 104 115 116 119 120
BRACKET_OPEN (279) 9 10 11 49 53 54 79 81 82 83 90 92 93 110 111
BRACKET_CLOSE (280) 9 10 11 49 54 55 79 80 82 83 90 91 92 110
BRACE_OPEN (281) 9 10 11 15 19 20 21 22 23 45 46 47 48 59 60 65 71
BRACE_CLOSE (282) 15 19 20 22 45 46 47 48 59 61 65 71
OP_AFFECT (283) 75 76 77 79 80 81 83
OP_ADD (284) 128
OP_SUBSTRACT (285) 130
OP_MULTIPLY (286) 129
OP_NOT (287) 102
LOG_AND (288) 131
LOG_LESS (289) 132
LOG_EQLESS (290) 133
LOG_MORE (291) 134
LOG_EQMORE (292) 135
LOG_EQ (293) 136
LOG_DIF (294) 137
SEMI_COLON (295) 29 45 46 47 48 72 74 75 77 78 79 80 81 82
DOT (296) 112 113 123
COMMA (297) 32 125


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1 2 3 4 5, on right: 0
MainClass (45)
    on left: 6, on right: 1 3 4 5
MainHead (46)
    on left: 9 10 11, on right: 6
@1 (47)
    on left: 7, on right: 9
@2 (48)
    on left: 8, on right: 9
MainBody (49)
    on left: 15, on right: 6
@3 (50)
    on left: 12, on right: 15
@4 (51)
    on left: 13, on right: 15
@5 (52)
    on left: 14, on right: 15
ClassDeclarationS (53)
    on left: 16 17 18, on right: 1 2 3 4 5 16 18
ClassDeclaration (54)
    on left: 19 20 21 22 23, on right: 16 18
ClassHead (55)
    on left: 24 25, on right: 9 10 11 19 20 21 22 23
VarDeclarationS (56)
    on left: 26 27, on right: 19 20 21 22 23 26
VarDeclaration (57)
    on left: 29 30, on right: 26 62
@6 (58)
    on left: 28, on right: 29
VariableS (59)
    on left: 32 33 34 35, on right: 32 35 45 46 47 48
@7 (60)
    on left: 31, on right: 32
Variable (61)
    on left: 36 37 38, on right: 29 30 32 33 35 45 46
MethodDeclarationS (62)
    on left: 39 40 41 42, on right: 15 19 20 21 22 23 39 41 42
MethodDeclaration (63)
    on left: 45 46 47 48, on right: 39 41 42
@8 (64)
    on left: 43, on right: 45
@9 (65)
    on left: 44, on right: 45
Type (66)
    on left: 49 50 51 52 53 54 55, on right: 36 38 48
StatementS (67)
    on left: 56 57 58, on right: 15 45 46 47 48 56 59 60 61 65 66 67
    68 71
Statement (68)
    on left: 59 60 61 62 65 66 67 68 71 72 73 74 75 76 77 78 79 80
    81 82 83, on right: 56 57 67
@10 (69)
    on left: 63, on right: 65
@11 (70)
    on left: 64, on right: 65
@12 (71)
    on left: 69, on right: 71
@13 (72)
    on left: 70, on right: 71
Expression (73)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105, on right: 45 46 47 48 65 66 67 71 72 73 74 75 76 78
    79 80 81 82 83 90 91 92 93 102 103 104 105 107 109 110 111 125
    126 127
@14 (74)
    on left: 84, on right: 85
ExpressionComp (75)
    on left: 107 109 110 111 112 113 115 116 117 119 120 121 122,
    on right: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101
    102 103 104 105 107 109 110 111 112 113 115 116 117 119 120 121
@15 (76)
    on left: 106, on right: 107
@16 (77)
    on left: 108, on right: 109
@17 (78)
    on left: 114, on right: 115
@18 (79)
    on left: 118, on right: 119
MethodCall (80)
    on left: 123, on right: 115 116 117 119 120 121
ExpressionS (81)
    on left: 125 126 127, on right: 98 99 100 101 115 116 117 125 127
@19 (82)
    on left: 124, on right: 125
Operator (83)
    on left: 128 129 130, on right: 107
Logic (84)
    on left: 131 132 133 134 135 136 137, on right: 109
Identifier (85)
    on left: 138, on right: 19 21 24 25 36 37 47 94 96 97 98 100 101
    123
Identifierexp (86)
    on left: 139, on right: 88
Identifieraff (87)
    on left: 140, on right: 75 76 77 78 79 80 81 82 83


state 0

    0 $accept: . Program $end

    error          shift, and go to state 1
    KEYWORD_CLASS  shift, and go to state 2

    Program    go to state 3
    MainClass  go to state 4
    MainHead   go to state 5
    ClassHead  go to state 6


state 1

    2 Program: error . ClassDeclarationS
    3        | error . MainClass ClassDeclarationS
   25 ClassHead: error . Identifier

    error          shift, and go to state 7
    IDENTIFIER     shift, and go to state 8
    KEYWORD_CLASS  shift, and go to state 2

    $end  reduce using rule 17 (ClassDeclarationS)

    MainClass          go to state 9
    MainHead           go to state 5
    ClassDeclarationS  go to state 10
    ClassDeclaration   go to state 11
    ClassHead          go to state 12
    Identifier         go to state 13


state 2

   24 ClassHead: KEYWORD_CLASS . Identifier

    IDENTIFIER  shift, and go to state 8

    Identifier  go to state 14


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 15


state 4

    1 Program: MainClass . ClassDeclarationS
    4        | MainClass . error ClassDeclarationS
    5        | MainClass . ClassDeclarationS error

    error          shift, and go to state 16
    KEYWORD_CLASS  shift, and go to state 2

    $end   reduce using rule 17 (ClassDeclarationS)
    error  [reduce using rule 17 (ClassDeclarationS)]

    ClassDeclarationS  go to state 17
    ClassDeclaration   go to state 11
    ClassHead          go to state 18


state 5

    6 MainClass: MainHead . MainBody

    IDENTIFIER  shift, and go to state 19

    MainBody  go to state 20


state 6

    9 MainHead: ClassHead . BRACE_OPEN KEYWORD_PUBLIC KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE
   10         | ClassHead . BRACE_OPEN error KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead . BRACE_OPEN error KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE

    BRACE_OPEN  shift, and go to state 21


state 7

   25 ClassHead: error . Identifier

    IDENTIFIER  shift, and go to state 8

    Identifier  go to state 13


state 8

  138 Identifier: IDENTIFIER .

    $default  reduce using rule 138 (Identifier)


state 9

    3 Program: error MainClass . ClassDeclarationS

    error          shift, and go to state 7
    KEYWORD_CLASS  shift, and go to state 2

    $end  reduce using rule 17 (ClassDeclarationS)

    ClassDeclarationS  go to state 22
    ClassDeclaration   go to state 11
    ClassHead          go to state 18


state 10

    2 Program: error ClassDeclarationS .

    $default  reduce using rule 2 (Program)


state 11

   16 ClassDeclarationS: ClassDeclaration . ClassDeclarationS
   18                  | ClassDeclaration . error ClassDeclarationS

    error          shift, and go to state 23
    KEYWORD_CLASS  shift, and go to state 2

    $end   reduce using rule 17 (ClassDeclarationS)
    error  [reduce using rule 17 (ClassDeclarationS)]

    ClassDeclarationS  go to state 24
    ClassDeclaration   go to state 11
    ClassHead          go to state 18


state 12

    9 MainHead: ClassHead . BRACE_OPEN KEYWORD_PUBLIC KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE
   10         | ClassHead . BRACE_OPEN error KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead . BRACE_OPEN error KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   19 ClassDeclaration: ClassHead . KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   20                 | ClassHead . KEYWORD_EXTENDS error BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   21                 | ClassHead . KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS error
   22                 | ClassHead . BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead . BRACE_OPEN VarDeclarationS MethodDeclarationS error

    KEYWORD_EXTENDS  shift, and go to state 25
    BRACE_OPEN       shift, and go to state 26


state 13

   25 ClassHead: error Identifier .

    $default  reduce using rule 25 (ClassHead)


state 14

   24 ClassHead: KEYWORD_CLASS Identifier .

    $default  reduce using rule 24 (ClassHead)


state 15

    0 $accept: Program $end .

    $default  accept


state 16

    4 Program: MainClass error . ClassDeclarationS
   25 ClassHead: error . Identifier

    error          shift, and go to state 7
    IDENTIFIER     shift, and go to state 8
    KEYWORD_CLASS  shift, and go to state 2

    $end  reduce using rule 17 (ClassDeclarationS)

    ClassDeclarationS  go to state 27
    ClassDeclaration   go to state 11
    ClassHead          go to state 18
    Identifier         go to state 13


state 17

    1 Program: MainClass ClassDeclarationS .
    5        | MainClass ClassDeclarationS . error

    error  shift, and go to state 28

    $end  reduce using rule 1 (Program)


state 18

   19 ClassDeclaration: ClassHead . KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   20                 | ClassHead . KEYWORD_EXTENDS error BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   21                 | ClassHead . KEYWORD_EXTENDS Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS error
   22                 | ClassHead . BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead . BRACE_OPEN VarDeclarationS MethodDeclarationS error

    KEYWORD_EXTENDS  shift, and go to state 25
    BRACE_OPEN       shift, and go to state 29


state 19

   15 MainBody: IDENTIFIER . @3 PARENTHESE_CLOSE @4 BRACE_OPEN StatementS BRACE_CLOSE @5 MethodDeclarationS BRACE_CLOSE

    $default  reduce using rule 12 (@3)

    @3  go to state 30


state 20

    6 MainClass: MainHead MainBody .

    $default  reduce using rule 6 (MainClass)


state 21

    9 MainHead: ClassHead BRACE_OPEN . KEYWORD_PUBLIC KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE
   10         | ClassHead BRACE_OPEN . error KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead BRACE_OPEN . error KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE

    error           shift, and go to state 31
    KEYWORD_PUBLIC  shift, and go to state 32


state 22

    3 Program: error MainClass ClassDeclarationS .

    $default  reduce using rule 3 (Program)


state 23

   18 ClassDeclarationS: ClassDeclaration error . ClassDeclarationS
   25 ClassHead: error . Identifier

    error          shift, and go to state 7
    IDENTIFIER     shift, and go to state 8
    KEYWORD_CLASS  shift, and go to state 2

    $end   reduce using rule 17 (ClassDeclarationS)
    error  [reduce using rule 17 (ClassDeclarationS)]

    ClassDeclarationS  go to state 33
    ClassDeclaration   go to state 11
    ClassHead          go to state 18
    Identifier         go to state 13


state 24

   16 ClassDeclarationS: ClassDeclaration ClassDeclarationS .

    $default  reduce using rule 16 (ClassDeclarationS)


state 25

   19 ClassDeclaration: ClassHead KEYWORD_EXTENDS . Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   20                 | ClassHead KEYWORD_EXTENDS . error BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   21                 | ClassHead KEYWORD_EXTENDS . Identifier BRACE_OPEN VarDeclarationS MethodDeclarationS error

    error       shift, and go to state 34
    IDENTIFIER  shift, and go to state 8

    Identifier  go to state 35


state 26

    9 MainHead: ClassHead BRACE_OPEN . KEYWORD_PUBLIC KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE
   10         | ClassHead BRACE_OPEN . error KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead BRACE_OPEN . error KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   22 ClassDeclaration: ClassHead BRACE_OPEN . VarDeclarationS MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead BRACE_OPEN . VarDeclarationS MethodDeclarationS error

    error           shift, and go to state 36
    TYPE_INT        shift, and go to state 37
    TYPE_BOOLEAN    shift, and go to state 38
    TYPE_STRING     shift, and go to state 39
    KEYWORD_PUBLIC  shift, and go to state 32

    error           [reduce using rule 27 (VarDeclarationS)]
    KEYWORD_PUBLIC  [reduce using rule 27 (VarDeclarationS)]
    BRACE_CLOSE     reduce using rule 27 (VarDeclarationS)

    VarDeclarationS  go to state 40
    VarDeclaration   go to state 41
    Variable         go to state 42
    Type             go to state 43


state 27

    4 Program: MainClass error ClassDeclarationS .

    $default  reduce using rule 4 (Program)


state 28

    5 Program: MainClass ClassDeclarationS error .

    $default  reduce using rule 5 (Program)


state 29

   22 ClassDeclaration: ClassHead BRACE_OPEN . VarDeclarationS MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead BRACE_OPEN . VarDeclarationS MethodDeclarationS error

    error         shift, and go to state 44
    TYPE_INT      shift, and go to state 37
    TYPE_BOOLEAN  shift, and go to state 38
    TYPE_STRING   shift, and go to state 39

    error           [reduce using rule 27 (VarDeclarationS)]
    KEYWORD_PUBLIC  reduce using rule 27 (VarDeclarationS)
    BRACE_CLOSE     reduce using rule 27 (VarDeclarationS)

    VarDeclarationS  go to state 40
    VarDeclaration   go to state 41
    Variable         go to state 42
    Type             go to state 43


state 30

   15 MainBody: IDENTIFIER @3 . PARENTHESE_CLOSE @4 BRACE_OPEN StatementS BRACE_CLOSE @5 MethodDeclarationS BRACE_CLOSE

    PARENTHESE_CLOSE  shift, and go to state 45


state 31

   10 MainHead: ClassHead BRACE_OPEN error . KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead BRACE_OPEN error . KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE

    KEYWORD_PUBLIC  shift, and go to state 46
    KEYWORD_MAIN    shift, and go to state 47


state 32

    9 MainHead: ClassHead BRACE_OPEN KEYWORD_PUBLIC . KEYWORD_MAIN @1 PARENTHESE_OPEN TYPE_STRING @2 BRACKET_OPEN BRACKET_CLOSE

    KEYWORD_MAIN  shift, and go to state 48


state 33

   18 ClassDeclarationS: ClassDeclaration error ClassDeclarationS .

    $default  reduce using rule 18 (ClassDeclarationS)


state 34

   20 ClassDeclaration: ClassHead KEYWORD_EXTENDS error . BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE

    BRACE_OPEN  shift, and go to state 49


state 35

   19 ClassDeclaration: ClassHead KEYWORD_EXTENDS Identifier . BRACE_OPEN VarDeclarationS MethodDeclarationS BRACE_CLOSE
   21                 | ClassHead KEYWORD_EXTENDS Identifier . BRACE_OPEN VarDeclarationS MethodDeclarationS error

    BRACE_OPEN  shift, and go to state 50


state 36

   10 MainHead: ClassHead BRACE_OPEN error . KEYWORD_PUBLIC KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   11         | ClassHead BRACE_OPEN error . KEYWORD_MAIN PARENTHESE_OPEN TYPE_STRING BRACKET_OPEN BRACKET_CLOSE
   37 Variable: error . Identifier
   54 Type: error . BRACKET_OPEN BRACKET_CLOSE

    IDENTIFIER      shift, and go to state 8
    KEYWORD_PUBLIC  shift, and go to state 46
    KEYWORD_MAIN    shift, and go to state 47
    BRACKET_OPEN    shift, and go to state 51

    Identifier  go to state 52


state 37

   49 Type: TYPE_INT . BRACKET_OPEN BRACKET_CLOSE
   51     | TYPE_INT .
   53     | TYPE_INT . BRACKET_OPEN error
   55     | TYPE_INT . error BRACKET_CLOSE

    error         shift, and go to state 53
    BRACKET_OPEN  shift, and go to state 54

    error       [reduce using rule 51 (Type)]
    IDENTIFIER  reduce using rule 51 (Type)


state 38

   50 Type: TYPE_BOOLEAN .

    $default  reduce using rule 50 (Type)


state 39

   52 Type: TYPE_STRING .

    $default  reduce using rule 52 (Type)


state 40

   22 ClassDeclaration: ClassHead BRACE_OPEN VarDeclarationS . MethodDeclarationS BRACE_CLOSE
   23                 | ClassHead BRACE_OPEN VarDeclarationS . MethodDeclarationS error

    error           shift, and go to state 55
    KEYWORD_PUBLIC  shift, and go to state 56

    error        [reduce using rule 40 (MethodDeclarationS)]
    BRACE_CLOSE  reduce using rule 40 (MethodDeclarationS)

    MethodDeclarationS  go to state 57
    MethodDeclaration   go to state 58


state 41

   26 VarDeclarationS: VarDeclaration . VarDeclarationS

    error         shift, and go to state 44
    TYPE_INT      shift, and go to state 37
    TYPE_BOOLEAN  shift, and go to state 38
    TYPE_STRING   shift, and go to state 39

    error           [reduce using rule 27 (VarDeclarationS)]
    KEYWORD_PUBLIC  reduce using rule 27 (VarDeclarationS)
    BRACE_CLOSE     reduce using rule 27 (VarDeclarationS)

    VarDeclarationS  go to state 59
    VarDeclaration   go to state 41
    Variable         go to state 42
    Type             go to state 43


state 42

   29 VarDeclaration: Variable . @6 SEMI_COLON
   30               | Variable . error

    error  shift, and go to state 60

    SEMI_COLON  reduce using rule 28 (@6)

    @6  go to state 61


state 43

   36 Variable: Type . Identifier
   38         | Type . error

    error       shift, and go to state 62
    IDENTIFIER  shift, and go to state 8

    Identifier  go to state 63


state 44

   37 Variable: error . Identifier
   54 Type: error . BRACKET_OPEN BRACKET_CLOSE

    IDENTIFIER    shift, and go to state 8
    BRACKET_OPEN  shift, and go to state 51

    Identifier  go to state 52


state 45
